Ensure LocationList and IndustryList align with TabSwitcher

--- a/components/LocationList.scss
+++ b/components/LocationList.scss
@@ -4,7 +4,7 @@
   font-size: 16px;
   line-height: 26px;
   color: #ffffff;
-  padding: 1rem 2rem;
+ // padding: 1rem 2rem;
   width: 100%;
   text-align: left;
  // background-color: #003366; // match dark blue section under tabs
